proper style, clean up and link to instance

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<style type="text/css">
 		body {
   		margin-top: 1.0em;
-  		background-color: #c70bed;
+  		background-color: #ffffff;
 		  font-family: "Helvetica,Arial,FreeSans"; 
   		color: #000000;
     }
@@ -52,14 +52,14 @@
       A Bittorrent tracker hub.
     </div>
 
-    <p>trackhub maintains a list of public trackers and acts has a tracker but redirects all requests to the trackers available in it's list. The listed trackers are regularly checked and redirects are only made to responding trackers.</p><h2>Dependencies</h2>
+    <p>trackhub maintains a list of public trackers and acts has a tracker but redirects all requests to the trackers available in it's list. The listed trackers are regularly checked and redirects are only made to responding trackers. A running instance is available at <a href="http://trackhub.appspot.com/"></a></p><h2>Dependencies</h2>
 <p>trackhub was designed to run on Google App Engine, any other environment may require code rewrite.</p>
 <h2>License</h2>
-<p>#Kopimi -- No license.</p>
+<p>Kopimi -- No license.</p>
 <h2>Authors</h2>
-<p>medecau (medecau@gmail.com)<br/><br/>      </p>
-<h2>Contact</h2>
-<p>medecau (medecau@gmail.com)<br/>      </p>
+<p>medecau (medecau@gmail.com)
+<br/>
+<br/>      </p>
 
 
     <h2>Download</h2>
