old untracked changes

--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
 <ul>{% for tracker in trackers_list %}
 <li />  {{tracker}}
 {% endfor %}</ul>
-<br /><br /><small>This list is provided by <a href="http://track-on.appspot.com/">Trackon</a>, thanks.</small></p>
+<br /><br /><small>This list is provided by <a href="http://www.trackon.org/">Trackon</a>, thanks.</small></p>
 </div>
 
 <div class="grid_4 omega">
@@ -312,7 +312,7 @@ Please do not use trackhub has your main tracker,<br />
 think of trackhub has a spare tire for trackers.</small><br /><br /></p>
 
 <h2 class="smallheader">Tracker admins:</h2>
-<p class="paragraph">Trackhub is now using the list of trackers provided by <a href="http://track-on.appspot.com/">Trackon</a>. Please refer to Trackon's documentation for details.<br /><br />
+<p class="paragraph">Trackhub is now using the list of trackers provided by <a href="http://www.trackon.org/">Trackon</a>. Please refer to Trackon's documentation for details.<br /><br />
 </p>
 
 
